# simple-expense-control-system

./: .gitignore  CMakeLists.txt  README.md  expenses.cpp  expenses.h
include/: ExpensesList.h  UserInputTreatment.h  expenses.h
src/: ExpensesList.cpp  UserInputTreatment.cpp  expenses.cpp  main.cpp
